# ICG-SwissGraphics

./: .gitignore  README.md
Current Submit/: Mesh.cpp  Mesh.h  README.md
Current-Submit/: README.md  solar_viewer.cpp  solar_viewer.h
Current-Submit/changed-files/: Mesh.cpp  ShadowViewer.cpp  phong_shadow.frag  shadowmap_gen.frag
Current-Submit/data_out/: stochastic_00.txt  stochastic_01.txt
Current-Submit/requested_output/: phong.frag  solar_viewer.cpp
Current-Submit/reverse_out/: flower_plant.txt
Handin/: debug_aabb  readme.txt
LaTeX/assignment_01/: main.tex
Lindenmayer/: run_reverse.bat  run_reverse.sh
Lindenmayer/data_out/: square_05.txt  stochastic_00.txt  stochastic_01.txt  stochastic_02.txt
Lindenmayer/reverse_in/: flower_tree.json  hexerode.json
Lindenmayer/src/: lsystem.cpp
Procedural-Generation/src/: main_terrain.cpp
Procedural-terrain/src/: main_terrain.cpp
Project/Improved-Ray-Tracer/: PlaneLight.cpp  README.md
Project/Improved-Ray-Tracer/src/: AreaLight.cpp  AreaLight.h  CMakeLists.txt  ClosedCylinder.cpp  ClosedCylinder.h  Cuboid.cpp  Cuboid.h  CutPlane.cpp  CutPlane.h  Cylinder.h  Light.h  Material.h  Plane.cpp  Plane.h  PlaneLight.cpp  PlaneLight.h  Scene.cpp  Scene.h  Spotlight.cpp  Spotlight.h  raytrace.cpp  vec3.h
Project/Proposal-Template/: proposal.html  proposal.md
Project/Report/: report.md
Rasterisation/src/: earth.frag  earth.vert  main.cpp  phong.frag  phong.vert  solar_viewer.cpp  solar_viewer.h  sun.vert  texture.cpp
Ray Tracer/src/: Mesh.h  (+3 more)
assignment_0/: readme.txt
current_handin/: README.md  readme.txt
(+59 files in other folders)
